fix auth tests + crm + feedback system