@@ -4,6 +4,7 @@ import com.univerliga.gateway.client.CrmClient;
 import com.univerliga.gateway.client.FeedbackClient;
 import com.univerliga.gateway.dto.FeedbackDtos;
 import com.univerliga.gateway.error.ApiException;
+import com.univerliga.gateway.model.CategoryRecord;
 import com.univerliga.gateway.model.FeedbackRecord;
 import com.univerliga.gateway.model.TaskRecord;
 import com.univerliga.gateway.security.CurrentUser;
@@ -19,11 +20,14 @@ import java.time.Instant;
 import java.time.LocalDate;
 import java.util.List;
 import java.util.Optional;
+import java.util.Set;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.lenient;
 import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
@@ -43,15 +47,22 @@ class FeedbackServiceTest {
     @BeforeEach
     void setUp() {
         feedbackService = new FeedbackService(feedbackClient, crmClient, currentUserService);
+        lenient().when(feedbackClient.categories()).thenReturn(List.of(
+            new CategoryRecord("cat_work", "Work", List.of(
+                new CategoryRecord.SubcategoryRecord("sub_comm_good", "Good", CategoryRecord.SubcategoryRecord.Polarity.POSITIVE, true),
+                new CategoryRecord.SubcategoryRecord("sub_deadline_fail", "Bad", CategoryRecord.SubcategoryRecord.Polarity.NEGATIVE, true)
+            ))
+        ));
     }
 
     @Test
-    void createFeedbackForbiddenForEmployeeWithoutParticipation() {
-        when(currentUserService.getCurrentUser()).thenReturn(new CurrentUser("employee", "p_employee", java.util.Set.of(SecurityRoles.EMPLOYEE)));
+    void createReviewForbiddenForEmployeeWithoutParticipationOnTask() {
+        when(currentUserService.getCurrentUser()).thenReturn(new CurrentUser("employee", "p_employee", Set.of(SecurityRoles.EMPLOYEE)));
         when(crmClient.findTaskById("task_1")).thenReturn(Optional.of(task(List.of("p_2", "p_3"))));
 
-        FeedbackDtos.CreateFeedbackRequest request = new FeedbackDtos.CreateFeedbackRequest(
-            "task_1", "p_2", "cat_1", "sub_1", 5, "ok"
+        FeedbackDtos.CreateReviewRequest request = new FeedbackDtos.CreateReviewRequest(
+            "p_2", FeedbackRecord.ContextType.TASK, "task_1", null, 5,
+            FeedbackRecord.Sentiment.POSITIVE, List.of("sub_comm_good"), "ok"
         );
 
         ApiException ex = assertThrows(ApiException.class, () -> feedbackService.create(request));
@@ -59,44 +70,63 @@ class FeedbackServiceTest {
     }
 
     @Test
-    void createFeedbackHidesAuthorInResponse() {
-        when(currentUserService.getCurrentUser()).thenReturn(new CurrentUser("manager", "p_manager", java.util.Set.of(SecurityRoles.MANAGER)));
+    void createReviewMapsLegacyTaskIdToTaskContext() {
+        when(currentUserService.getCurrentUser()).thenReturn(new CurrentUser("manager", "p_manager", Set.of(SecurityRoles.MANAGER)));
         when(crmClient.findTaskById("task_1")).thenReturn(Optional.of(task(List.of("p_2", "p_3"))));
-        when(feedbackClient.createFeedback("task_1", "p_2", "p_manager", "cat_1", "sub_1", 5, "ok"))
-            .thenReturn(new FeedbackRecord("fb_1", "task_1", "p_2", "p_manager", "cat_1", "sub_1", 5, "ok", Instant.now()));
-
-        FeedbackDtos.FeedbackItem result = feedbackService.create(new FeedbackDtos.CreateFeedbackRequest(
-            "task_1", "p_2", "cat_1", "sub_1", 5, "ok"
+        when(feedbackClient.findDuplicate("p_manager", "p_2", FeedbackRecord.ContextType.TASK, "task_1")).thenReturn(Optional.empty());
+        when(feedbackClient.createReview(any())).thenReturn(new FeedbackRecord(
+            "fb_1", "p_2", "p_manager", FeedbackRecord.ContextType.TASK, "task_1",
+            5, FeedbackRecord.Sentiment.POSITIVE, List.of("sub_comm_good"), "ok", Instant.now(), null
         ));
 
-        assertNull(result.authorPersonId());
+        FeedbackDtos.ReviewResponse result = feedbackService.create(new FeedbackDtos.CreateReviewRequest(
+            "p_2", null, null, "task_1", 5,
+            null, List.of("sub_comm_good"), "ok"
+        ));
+
         assertEquals("fb_1", result.id());
+        assertNull(result.updatedAt());
+        assertEquals(FeedbackRecord.ContextType.TASK, result.contextType());
     }
 
     @Test
-    void rawIsForbiddenForNonAdmin() {
-        when(currentUserService.getCurrentUser()).thenReturn(new CurrentUser("manager", "p_manager", java.util.Set.of(SecurityRoles.MANAGER)));
+    void duplicateReviewReturnsConflict() {
+        when(currentUserService.getCurrentUser()).thenReturn(new CurrentUser("employee", "p_employee", Set.of(SecurityRoles.EMPLOYEE)));
+        when(crmClient.findTaskById("task_1")).thenReturn(Optional.of(task(List.of("p_employee", "p_3"))));
+        when(feedbackClient.findDuplicate("p_employee", "p_2", FeedbackRecord.ContextType.TASK, "task_1"))
+            .thenReturn(Optional.of(new FeedbackRecord(
+                "fb_exists", "p_2", "p_employee", FeedbackRecord.ContextType.TASK, "task_1",
+                5, FeedbackRecord.Sentiment.POSITIVE, List.of("sub_comm_good"), "old", Instant.now(), null
+            )));
 
-        ApiException ex = assertThrows(ApiException.class, () -> feedbackService.raw(null, null, null, 1, 20));
+        FeedbackDtos.CreateReviewRequest request = new FeedbackDtos.CreateReviewRequest(
+            "p_2", FeedbackRecord.ContextType.TASK, "task_1", null, 5,
+            FeedbackRecord.Sentiment.POSITIVE, List.of("sub_comm_good"), "ok"
+        );
+        ApiException ex = assertThrows(ApiException.class, () -> feedbackService.create(request));
 
-        assertEquals("FORBIDDEN", ex.getCode());
+        assertEquals("DUPLICATE_REVIEW", ex.getCode());
+        assertEquals("existingReviewId", ex.getDetails().getFirst().field());
     }
 
     @Test
-    void rawContainsAuthorForAdmin() {
-        when(currentUserService.getCurrentUser()).thenReturn(new CurrentUser("admin", "p_admin", java.util.Set.of(SecurityRoles.ADMIN)));
-        when(feedbackClient.findRaw(null, null, null)).thenReturn(List.of(
-            new FeedbackRecord("fb_1", "task_1", "p_2", "p_3", "cat_1", "sub_1", 4, "ok", Instant.now())
+    void rawContainsAuthorForHr() {
+        when(currentUserService.getCurrentUser()).thenReturn(new CurrentUser("hr", "p_hr", Set.of(SecurityRoles.HR)));
+        when(feedbackClient.findRaw(null, null, null, null)).thenReturn(List.of(
+            new FeedbackRecord("fb_1", "p_2", "p_3", FeedbackRecord.ContextType.EPISODE, "episode_1",
+                4, FeedbackRecord.Sentiment.POSITIVE, List.of("sub_comm_good"), "ok", Instant.now(), null)
         ));
 
-        FeedbackDtos.FeedbackPage response = feedbackService.raw(null, null, null, 1, 20);
-        FeedbackDtos.FeedbackItem item = (FeedbackDtos.FeedbackItem) response.items().get(0);
+        FeedbackDtos.ReviewPage response = feedbackService.raw(null, null, null, null, 1, 20);
+        FeedbackDtos.RawReviewResponse item = (FeedbackDtos.RawReviewResponse) response.items().getFirst();
 
         assertEquals("p_3", item.authorPersonId());
         assertNotNull(item.createdAt());
     }
 
     private TaskRecord task(List<String> participants) {
-        return new TaskRecord("task_1", "T", "D", "ACTIVE", LocalDate.parse("2026-01-01"), LocalDate.parse("2026-01-31"), "p_1", "p_2", participants, Instant.now(), null);
+        return new TaskRecord("task_1", "T", "D", "ACTIVE",
+            LocalDate.parse("2026-01-01"), LocalDate.parse("2026-01-31"),
+            "p_1", "p_2", participants, Instant.now(), null);
     }
 }
